--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,15 +6,15 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			Designed & Developed in Portland with <a href="https://astro.build/">Astro</a>
-			<Icon icon="rocket-launch" size="1.2em" />
+			Designed & Developed in India With <a href="https://fiverr.com/scarleyegaming">Brain</a>
+			<Icon icon="pencil-line" size="1.2em" />
 		</p>
-		<p>&copy; {currentYear} Jeanine White</p>
+		<p>&copy; {currentYear} Kiyotaka</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/me"> Twitter</a>
-		<a href="https://github.com/me"> GitHub</a>
-		<a href="https://codepen.io/me"> CodePen</a>
+		
+		<a href="https://github.com/scarleyegaming"> GitHub</a>
+		
 	</p>
 </footer>
 <style>
