--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,17 +6,17 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<p>We have large team with Full Stack Devs For Android App, Website, AI Development + More</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
+		<Icon icon="microphone-stage" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<p>24/7 Customer Care. Contact Us on Discord, Whatsapp, Fiverr.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<p>We Provide Every Work With Every Params To Satisfy Customer Needs.</p>
 	</div>
 </section>
 
