--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,13 +36,13 @@ const projects = (await getCollection('work'))
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="github-logo" size="1.33em" /> Student</Pill>
+						<Pill><Icon icon="student" size="1.33em" /> Student</Pill>
 						<Pill><Icon icon="list" size="1.33em" /> Book Reader</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Kiyotaka smiling in a red plaid shirt and tortoise shell glasses"
+					alt="work"
 					width="480"
 					height="620"
 					src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
