modified:   public/favicon.svg 	modified:   src/components/IconPaths.ts 	modified:   src/components/Nav.astro 	modified:   src/components/Skills.astro 	modified:   src/pages/index.astro

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -10,7 +10,7 @@ import Icon from './Icon.astro';
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="microphone-stage" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
+		<h2>Customer Friendly</h2>
 		<p>24/7 Customer Care. Contact Us on Discord, Whatsapp, Fiverr.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
