--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const projects = (await getCollection('work'))
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
 						<Pill><Icon icon="student" size="1.33em" /> Student</Pill>
-						<Pill><Icon icon="list" size="1.33em" /> Book Reader</Pill>
+						<Pill><Icon icon="book" size="1.33em" /> Book Reader</Pill>
 					</div>
 				</Hero>
 
