modified:   src/components/Nav.astro 	modified:   src/components/Pill.astro 	modified:   src/pages/index.astro 	modified:   src/styles/global.css

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -258,13 +258,16 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 		display: flex;
 		padding: var(--icon-padding);
 		text-decoration: none;
+		
 		color: var(--accent-dark);
 		transition: color var(--theme-transition);
+		transition: transform 0.5s;
 	}
 
 	.social:hover,
 	.social:focus {
 		color: var(--accent-text-over);
+		transform: scale(1.5);
 	}
 
 	.theme-toggle {
