--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -12,5 +12,10 @@
 		font-size: var(--text-md);
 		line-height: 1.35;
 		white-space: nowrap;
+		transition: transform 0.5s;
+	}
+	.pill:hover{
+		transform: scale(1.1);
+		border: 1px solid white;
 	}
 </style>
